Fixed header overlap issue

--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@ body{
 #headerContainer{
     width: 100%;
     height: 500px;
+}
+.navbar {
 	display: flex;
-	z-index: 1000;
+    z-index: 10000;
 }
 .welcomeImg{
     height: 500px;
